--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,7 @@ a {
 
 .contacts {
   padding: 50px 0 0;
-  background-color: #615f5f; }
+  background-color: #3c3c3f; }
 
 .contacts__title {
   font-weight: 800;
