--- a/css/style.css
+++ b/css/style.css
@@ -386,6 +386,8 @@ a {
 
 .advantages__item-text {
   margin-top: -25px;
+  font-size: 18px;
+  font-weight: 500;
   text-align: center;
   color: #383839; }
 
